--- a/01-base-start./index.html
+++ b/01-base-start./index.html
@@ -16,7 +16,8 @@
     />
     <title>01. JS Base</title>
     <script src="app.js" defer></script>
-    <script src="theory.js" defer></script>
+<!--    <script src="theory.js" defer></script>-->
+<!--    <script src="./js/01-base-start/theory.js"></script>-->
   </head>
   <body class=" bg-dark text-light
     ">
