--- a/04-objects-finish./index.html
+++ b/04-objects-finish./index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta  >
     <title>Title</title>
+    <script src="04-objects.js" defer></script>
 </head>
 <body>
 
